# nc-benefits-navigator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/workflows/: publish-image.yml  table-freshness.yml
docs/: adopting.md  contributing.md  rules.md
docs/superpowers/plans/: 2026-06-12-nc-benefits-navigator.md
docs/superpowers/specs/: 2026-06-12-nc-benefits-navigator-design.md
interview/: __init__.py  fake.py  loop.py  prompt.py  tools.py
rules/: citations.py  engine.py  models.py
rules/programs/: __init__.py  _shared.py  fns.py  lifeline.py  medicaid.py  types.py  wic.py
rules/tables/: __init__.py  fns.yaml  fpl.yaml  lifeline.yaml  loader.py  medicaid.yaml  wic.yaml
scripts/: gen_rules_doc.py
server/: app.py  config.py  routes.py  sessions.py
tests/fixtures/golden/: 01-eligible-both.yaml  02-ineligible-both.yaml  03-fns-only.yaml  04-medicaid-only.yaml  05-elderly-medical.yaml  06-disabled-shelter-uncapped.yaml  07-mixed-immigration.yaml  08-pregnant.yaml  09-abd-handoff.yaml  (+7 more)
tests/interview/: eval_harness.py  fakes.py  test_adversarial_evals.py  test_evals.py  test_fake.py  test_loop.py  test_prompt.py  test_robustness_evals.py  test_tools.py
tests/rules/: test_adversarial.py  test_citations.py  test_engine.py  test_expedited_homeless.py  test_fns.py  test_freshness.py  test_golden.py  test_income_margin.py  test_lifeline.py  test_medicaid.py  test_models.py  test_properties.py  test_published_limits.py  test_robustness.py  test_tables.py  test_wic.py
tests/server/: test_api.py  test_api_adversarial.py  test_api_robustness.py  test_sessions.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: screening.spec.ts
web/src/: App.tsx  api.ts  index.css  lib.ts  markdown.tsx  types.ts
(+14 files in other folders)
