[project]
name = "nc-benefits-navigator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "pyyaml",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rules", "interview", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: real-API interview evals — run manually with `uv run pytest -m eval`",
    "adversarial: real-API adversarial interview evals — run manually with `uv run pytest -m adversarial`",
    "linkcheck: network tests that fetch citation/source URLs — run manually with `uv run pytest -m linkcheck`",
]
addopts = "-m 'not eval and not adversarial and not linkcheck'"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
